--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,100 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.navBar {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  background-color: #6f9580;
+  border-bottom-style: solid;
+  border-bottom-width: 2px;
+  border-bottom-color: rgb(175, 175, 175);
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  min-height: 40px;
+  padding-left: 25px;
+  font-size: large;
+}
+
+.cart-items {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  margin-left: 20px;
+}
+.buttons{
+  display: flex;
+  justify-items: flex-end;
+}
+.cart-num {
+  background-color: grey;
   color: white;
+  border-radius: 5px;
+  text-align: center;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  padding-left: 10px;
+  padding-right: 10px;
+  margin-left: 5px;
 }
 
-.App-link {
-  color: #61dafb;
+.all-books {
+  display: flex;
+  margin: 20px;
+  margin-top: 50px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.card {
+  border-style: solid;
+  border-width: 2px;
+  border-color: rgb(211, 211, 211);
+  border-radius: 10px;
+  max-width: 250px;
+  text-align: center;
+  margin: 30px;
+  
+  
 }
+
+.card-img-top {
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+  width:250px;
+  height: 300px;
+}
+
+.card-body {
+  margin: 10px;
+}
+
+.btn {
+  background-color: #6f9580;
+  color: white;
+  padding-top: 10px;
+  padding-bottom: 5px;
+  padding-left: 10px;
+  padding-right: 10px;
+  margin: 3px;
+  border-radius: 3px;
+  border-width: 0px;
+}
+
+a {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.caption{
+  text-transform: uppercase;
+  margin: 20px;
+  text-align: center;
+  font-size: 35px;
+}
+.orange{
+  color: #bc6c25;
+}
+.sortbtn{
+  background-color: #bc6c25;
+  color: white;
+  padding: 15px;
+  margin: 15px;
+  border-radius: 3px;
+  border-width: 0px;
+}
+
